# Agentic_AI

hello-agent/: README.md
hello-agent/sync/hello_agent/: README.md
litellm-openai-agent/litellm/myproject/: .env  README.md  pyproject.toml
litellm-openai-agent/litellm/myproject/src/myproject/: hello.py
litellm-openai-agent/uv-litellm-chainlite/chatbot/: README.md  chat_history.json  main.py
openrouter/: README.md  main.py
uv/project-1-uv/explore-uv/: pyproject.toml
uv/project-1-uv/explore-uv/src/explore_uv/: hellow.py
uv/project-2-uv/explore-uv/: README.md
uv/project-2-uv/explore-uv/src/explore_uv/: .gitignore  main.py
